[gd_scene load_steps=13 format=3 uid="uid://cmqfrusykgypy"]

[ext_resource type="Script" path="res://scripts/main_menu/exit_area_button.gd" id="1"]
[ext_resource type="Script" path="res://scripts/main_menu/menu.gd" id="3"]
[ext_resource type="Script" path="res://scripts/main_menu/side_menu_button_area.gd" id="3_11tis"]
[ext_resource type="Script" path="res://scripts/main_menu/menu_button.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://ccblccwjfrh2j" path="res://resources/icons/hamburger_menu.png" id="4_rvcit"]
[ext_resource type="Script" path="res://scripts/main_menu/main_menu.gd" id="5"]

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k7rft"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbxac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hf1aj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vjlbl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fojgy"]
bg_color = Color(0.12549, 0.121569, 0.14902, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5")

[node name="ExitAreaButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/disabled = SubResource("2")
theme_override_styles/focus = SubResource("2")
script = ExtResource("1")

[node name="SideMenuButtonArea" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 10.0
grow_vertical = 2
script = ExtResource("3_11tis")

[node name="MenuButton" type="Button" parent="SideMenuButtonArea"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_k7rft")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gbxac")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hf1aj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vjlbl")

[node name="MenuButtonBg" type="ColorRect" parent="SideMenuButtonArea/MenuButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 1
color = Color(0.141176, 0.141176, 0.141176, 0.176471)

[node name="MenuButtonIcon" type="TextureRect" parent="SideMenuButtonArea/MenuButton/MenuButtonBg"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("4_rvcit")
expand_mode = 4
stretch_mode = 4

[node name="Menu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fojgy")
script = ExtResource("3")

[node name="SettingSeparator" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="AppNameLabel" type="Label" parent="Menu/SettingSeparator"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "DreamDeck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 80.0
icon = ExtResource("4_rvcit")
icon_alignment = 1
expand_icon = true
script = ExtResource("4")

[connection signal="pressed" from="ExitAreaButton" to="ExitAreaButton" method="_on_ExitAreaButton_pressed"]
[connection signal="mouse_entered" from="SideMenuButtonArea" to="SideMenuButtonArea" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SideMenuButtonArea" to="SideMenuButtonArea" method="_on_mouse_exited"]
[connection signal="pressed" from="SideMenuButtonArea/MenuButton" to="SideMenuButtonArea" method="_on_menu_button_pressed"]
[connection signal="pressed" from="MenuButton" to="MenuButton" method="_on_MenuButton_pressed"]
